Changing to proper gaussian so sample mean makes sense

--- a/Bandit.ipynb
+++ b/Bandit.ipynb
@@ -34,6 +34,8 @@
     "\n",
     "sns.distplot(naive) # plt.hist(naive, bins=20)\n",
     "sns.distplot(mine) # plt.hist(mine, bins=20)\n",
+    "print(\"Naive mean: \", np.mean(naive))\n",
+    "print(\"My Strategy: \", np.mean(mine))\n",
     "plt.legend([\"Naive Strategy\", \"My Strategy\"])"
    ]
   },
