Adding temporal changes

--- a/Bandit.ipynb
+++ b/Bandit.ipynb
@@ -24,11 +24,13 @@
    "source": [
     "n_trials = 1000\n",
     "K = 10\n",
+    "change_lambda = 0.1\n",
     "naive = []\n",
     "mine = []\n",
-    "mine2 = []\n",
     "for seed in range(500):\n",
-    "    bandit = Bandit(2, seed)\n",
+    "    if seed%20 == 0:\n",
+    "        print(seed, end=',')\n",
+    "    bandit = Bandit(K, seed, change_lambda)\n",
     "    naive.append(naive_maximize_reward(bandit, n_trials))\n",
     "    mine.append(my_maximize_reward(bandit, n_trials))\n",
     "\n",
